# coldcase

./: CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
assets/: coldcase-banner.txt
build_windows/: BUILD_RELEASE.bat
dashboard/: app.js  index.html  style.css
docs/: ARCHITECTURE.md  CASE_FORMAT.md  SAFETY.md  USAGE.md
examples/: quickstart.md
rules/: coldcase.rules
src/: case.rs  collectors.rs  db.rs  hashing.rs  main.rs  models.rs  report.rs  rules.rs  scanner.rs  util.rs
